force-app/main/default/objects/Notas__c/Notas__c.object-meta.xml
<CustomObject>
    <label>Notas</label>
    <nameField>
        <label>Título</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>