force-app/main/default/objects/Notas__c/fields/NotasId__c.field-meta.xml
<CustomField>
    <fullName>NotasId__c</fullName>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notas</relationshipLabel>
    <relationshipName>Notas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>