force-app/main/default/objects/Notas__c/fields/Propriet_rio_da_nota__c.field-meta.xml
<CustomField>
    <fullName>Propriet_rio_da_nota__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietário da nota</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notas</relationshipName>
    <type>Lookup</type>
</CustomField>